Logic: new task adds to list

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <input id="taskInput" type="text" name="task" placeholder="What do you have to do?">
             <button id="btnAddTask" type="button">Add Task</button>
         
-            <ol>
+            <ol id="taskList">
                 <li>
                     <input type="checkbox" id="task1">
                     <label for="task1">Task 1</label>
